refactor: minor java refactoring using IDEA suggestions for discordantpair package